Finally fix NotNull constraint workaround with Postgres Refactor to stabilize code base